# vigir_behavior_synthesis

./: .gitignore  LICENSE  README.md
examples/all_modes_pickup/: pickup.aut  pickup.json
examples/object_pickup/: object_pickup.aut  object_pickup.dot  object_pickup.structuredslugs  object_pickup.yaml
vigir_behavior_synthesis/: CMakeLists.txt  package.xml
vigir_behavior_synthesis_msgs/msg/: AutomatonState.msg
vigir_bs_manager/: CMakeLists.txt  package.xml  setup.py
vigir_bs_manager/launch/: behavior_synthesis.launch
vigir_bs_manager/src/vigir_bs_manager/: behavior_synthesis_client.py  behavior_synthesis_server.py  ltl_compilation_client.py  sm_generate_client.py
vigir_bs_msgs/: CMakeLists.txt  README.md  package.xml
vigir_bs_msgs/action/: BehaviorSynthesis.action
vigir_bs_msgs/msg/: AutomatonState.msg  BSErrorCodes.msg  BehaviorSynthesisRequest.msg  LTLFormula.msg  SynthesizedAutomaton.msg
vigir_bs_msgs/srv/: CompileLTL.srv  LTLCompilation.srv  LTLSynthesis.srv  SMGenerate.srv
vigir_bs_sm_generation/: CMakeLists.txt  package.xml
vigir_bs_sm_generation/src/vigir_bs_sm_generation/: bs_sm_generate.py
vigir_bs_sm_generation/src/vigir_bs_sm_generation/examples/all_modes_pickup/: pickup.dot  pickup.ltl  pickup.slugsin  pickup.smv  pickup.yaml
vigir_bs_sm_generation/src/vigir_bs_sm_generation/examples/object_pickup/: object_pickup.json  object_pickup.slugsin  object_pickup.yaml
vigir_bs_specification/: CMakeLists.txt  package.xml  setup.py
vigir_bs_specification/src/vigir_bs_specification/: atlas_preconditions.yaml  atlas_specification.py  gr1_formulas.py  gr1_specification.py  ltl_compilation_server.py  tests.py
vigir_bs_synthesizer/: CMakeLists.txt  package.xml  setup.py
vigir_bs_synthesizer/src/vigir_bs_synthesizer/: call_synthesizer.py  ltl_synthesis_server.py
vigir_ltl_specification/: CMakeLists.txt  package.xml  setup.py
vigir_ltl_specification/src/vigir_ltl_specification/: __init__.py  activation_outcomes.py  atlas_specification.py  atlas_specification_old.py  goal_specification.py  gr1_formulas.py  gr1_specification.py  ic_specification.py  ltl.py  ltl_compilation_server.py  preconditions.py  robot_specification.py  task_specification.py  test_activation_completion.py  ts_specification.py
vigir_ltl_specification/src/vigir_ltl_specification/config/: atlas_config.yaml  atlas_preconditions.yaml
vigir_ltl_specification/test/: activation_outcomes_test.py
vigir_ltl_specification/test/unit/: activation_outcomes_test.py  goal_specification_test.py  gr1_formulas_test.py  ic_specification_test.py  robot_specification_test.py  ts_specification_test.py
vigir_ltl_specification/test/unit/formula/: activation_outcomes_test.py  gr1_formulas_test.py
vigir_ltl_specification/test/unit/spec/: goal_specification_test.py  ic_specification_test.py  robot_specification_test.py  ts_specification_test.py
vigir_ltl_synthesizer/: CMakeLists.txt  README.md  install_slugs.sh  package.xml  setup.py
vigir_ltl_synthesizer/src/vigir_bs_synthesizer/: ltl_synthesis_server.py
vigir_ltl_synthesizer/src/vigir_ltl_synthesizer/: call_synthesizer.py  ltl_synthesis_server.py
vigir_ltl_synthesizer/synthesis_byproducts/: README.md
vigir_sm_generation/: CMakeLists.txt  package.xml  setup.py
vigir_sm_generation/src/vigir_sm_generation/: concurrent_state_generator.py  sm_gen_config.py  sm_gen_error.py  sm_gen_helper.py  sm_gen_util.py  sm_generation.py  sm_generation_server.py  visualize_automaton.py
vigir_sm_generation/src/vigir_sm_generation/configs/: atlas.yaml  systems.yaml  test.yaml
vigir_sm_generation/src/vigir_sm_generation/test/: test_sm_gen_request.yaml  test_sm_gen_request_multiple_output.yaml  test_sm_generation.py
vigir_synthesis_manager/: CMakeLists.txt  package.xml  setup.py
vigir_synthesis_manager/launch/: behavior_synthesis.launch
vigir_synthesis_manager/src/vigir_bs_manager/: behavior_synthesis_client.py  sm_generate_client.py
vigir_synthesis_manager/src/vigir_synthesis_manager/: behavior_synthesis_client.py  behavior_synthesis_server.py  ltl_compilation_client.py  ltl_synthesis_client.py  sm_generate_client.py
vigir_synthesis_msgs/: CMakeLists.txt  README.md  package.xml
vigir_synthesis_msgs/action/: BehaviorSynthesis.action
vigir_synthesis_msgs/msg/: BSErrorCodes.msg  BehaviorSynthesisRequest.msg  FSAutomaton.msg  LTLSpecification.msg  SynthesisErrorCodes.msg  SynthesisOptions.msg
vigir_synthesis_msgs/srv/: GenerateFlexBESM.srv  GenerateLTLSpecification.srv  LTLCompilation.srv  SMGenerate.srv  SynthesizeAutomaton.srv
