<?xml version="1.0"?>
<package>
  <name>vigir_behavior_synthesis</name>
  <version>1.0.0</version>
  <description>
    This metapackage depends on the Behavior Synthesis msgs, services, 
    and action, as well as on ReSpeC.
  </description>

  <author email="sm2296@cornell.edu">Spyros Maniatopoulos</author>
  <maintainer email="sm2296@cornell.edu">Spyros Maniatopoulos</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>respec</run_depend>
  <run_depend>vigir_ltl_specification</run_depend>
  <run_depend>vigir_ltl_synthesizer</run_depend>
  <run_depend>vigir_sm_generation</run_depend>
  <run_depend>vigir_synthesis_manager</run_depend>
  <run_depend>vigir_synthesis_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>