<package>
	
	<name>vigir_bs_manager</name>
	<version>1.0.0</version>
	<description>An action server that ...</description>
	
	<author email="sm2296@cornell.edu">Spyros Maniatopoulos</author>
	
	<maintainer email="sm2296@cornell.edu">Spyros Maniatopoulos</maintainer>
	
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>actionlib</build_depend>
	
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>actionlib_msgs</run_depend>

</package>