<package>
	
	<name>vigir_synthesis_msgs</name>
	<version>1.0.0</version>
	<description>Messages, services and actions used by Team ViGIR's Behavior Synthesis</description>
	
	<author email="sm2296@cornell.edu">Spyros Maniatopoulos</author>
	
	<maintainer email="sm2296@cornell.edu">Spyros Maniatopoulos</maintainer>
	
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>message_generation</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	
	<run_depend>message_runtime</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>vigir_be_core</run_depend>

</package>